--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 body {
     text-align: center;
     font-family: Montserrat;
-    background-color: #e3e3e3;
+    background-color: #fff;
     position: relative;
     height: 100vh;
     margin: 0;
